<resources>
    <string name="app_name">voice based prescription</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="phone">Phone</string>
    <string name="choose" />
    <string name="string_choose">choose</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tap_to_open_mic">Tap to open Mic</string>
    <string name="_2222222222">2222222222</string>
    <string name="phone_no">Phone</string>
    <string name="password_pass">Password</string>
    <string name="rrrrrrrr">rrrrrrrr</string>
    <string name="todo1">TODO</string>
    <string name="rrrrrrrrs">rrrrrrrr</string>
    <string name="pass1">Password</string>
    <string name="phone1">Phone</string>

</resources>