<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Signup_Form">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/teal_700"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="5"
            android:id="@+id/name"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/teal_700">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:ems="5"
            android:id="@+id/phone"
            android:inputType="text"
            android:textSize="22sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/teal_700">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="5"
            android:id="@+id/email"
            android:inputType="text"
            android:textSize="22sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/teal_700">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="5"
            android:id="@+id/pswd"
            android:inputType="text"
            android:textSize="22sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/teal_700"
        tools:ignore="MissingConstraints">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="5"
            android:id="@+id/c_pswd"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/RbtnM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/teal_700"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/RbtnF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/female"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            />
</RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/CboxD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"/>
    <CheckBox
        android:id="@+id/CboxP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        />
    <Button
        android:id="@+id/reg1btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/teal_700"/>

</LinearLayout>