<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Form"
    android:orientation="vertical"
    android:padding="30dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/login1_icon"
        android:padding="50dp"
        android:id="@+id/loginicon"
        android:background="@drawable/button_rounded"
        android:contentDescription="@string/todo" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/black"
        tools:ignore="MissingConstraints">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:text="2222222222"
            android:id="@+id/l_phone"
            android:hint="Phone"
            android:inputType="text"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/black"
        tools:ignore="MissingConstraints"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="Password"
            android:text="rrrrrrrr"
            android:id="@+id/l_pswd"
            android:inputType="textPassword"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"/>
    <Button
        android:id="@+id/regbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"/>



</LinearLayout>